Migrate to Gradle + Java 21 and extract logic from rendering
Build system:
- Replace Eclipse .classpath/.project with build.gradle.kts (Kotlin DSL)
  targeting Java 21; LWJGL, Slick2D, JAMA and JUnit 5 declared as
  Gradle dependencies — no more manually downloaded jars or stubs
- Restructure sources to standard Maven/Gradle layout
  (src/main/java/main/, src/test/java/main/)
- Remove run_tests.sh, src/stubs/, lib/ — superseded by ./gradlew test

Java 9+ fixes:
- Remove unused com.sun.xml.internal.ws.util.StringUtils import (Node.java)
- Replace deprecated new Integer(0) with Integer.valueOf(0) (Waypoints.java)

Logic / rendering separation:
- SimulationMath: pure-math distance/dirto utilities (no rendering deps)
- SimulationContext: narrow interface (getDelta, getScreen*, getBuckets,
  removeVehicle) — the only seam Vehicle/Factory now depend on
- VehicleRegistry: addVehicle/getVehicles interface for Factory
- Vehicle: replaces Start st field with SimulationContext sim; removes
  rendering-only fields (colcirc1/2/3, colcirccol, colcircradius);
  no LWJGL import remains
- Car, Bus: constructor signatures updated (Start → SimulationContext)
- Factory: replaces Start s with SimulationContext + VehicleRegistry
- Start: implements both interfaces; game loop split into initDisplay,
  initSimulation, tickLogic, tickRender; dead deltacounter block removed

New tests (89 total, 1 intentional failure):
- FakeSimulationContext: in-memory SimulationContext+VehicleRegistry
  for headless unit testing
- VehicleTest: position advance, speed, screen-wrap, end-of-route
  removal, bucket placement, delta delegation (16 new tests)
- FactoryTest: spawn timing, collision blocking, amount limit,
  isColliding (10 new tests)

https://claude.ai/code/session_01YN2wFYQRZaynDfeYQKBJNE